tests/macros/input/mask.rs
fn main() {
    let q = inquisition::questions![input { mask: todo!() }];
}
